// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normal fade-button renders correctly 1`] = `
<button
  className="lui-fade-button"
  type="button"
>
  Text
</button>
`;

exports[`fade-button passes props correctly 1`] = `
<button
  className="lui-fade-button my-class"
  data-x="x"
  onClick={[MockFunction]}
  title="Title"
  type="button"
>
  Text
</button>
`;

exports[`fade-button with modifiers renders correctly 1`] = `
<button
  className="lui-fade-button lui-fade-button--success lui-fade-button--large lui-fade-button--block lui-fade-button--rounded"
  type="button"
  value="Value"
/>
`;

exports[`fade-button with states renders correctly 1`] = `
<button
  className="lui-fade-button lui-active"
  disabled={true}
  type="button"
  value="Value"
/>
`;

exports[`fade-button with subcomponents renders correctly 1`] = `
<button
  className="lui-fade-button"
  type="button"
>
  <span
    aria-hidden="true"
    className="lui-icon lui-icon--more lui-fade-button__icon"
  />
  <span
    className="lui-fade-button__text"
  >
    Text
  </span>
  <span
    className="lui-fade-button__caret  lui-caret"
  />
</button>
`;
